--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ python-dotenv==1.2.1
 pydantic>=2.0.0
 fastapi==0.120.1
 uvicorn==0.38.0
+langchain-text-splitters>=0.3.0
 
 # For document processing and embeddings
 faiss-cpu==1.8.0
